--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 ---
-name : twitter
+name : twitter-alt
 website : http://twitter.github.com/bootstrap
-git_url : git://github.com/jekyllbootstrap/theme-twitter.git
-source_url : https://github.com/jekyllbootstrap/theme-twitter
+git_url : ssh://git@github.com:wwbrannon/theme-twitter-alt.git
+source_url : https://github.com/wwbrannon/theme-twitter-alt
 author:
-  name : "Jacob Thornton and Mark Otto"
+  name : "Will Brannon"
   website : http://twitter.github.com/bootstrap
